modifications sur les entitées + l'ajout de la notifications